Update colors & minor content changes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <style>
             body {
                 margin: 15px;
+		background-color: #2b303b;
+		color: #fff;
             }
             .bs-callout .media-body.vertical-center {
                 padding: 15px 0 0 15px;
@@ -29,9 +31,13 @@
                 font-weight: bold;
                 margin-top: 10px;
                 padding: 9px 14px;
-                background-color: #f7f7f9;
+                background-color: #2b303b;
                 border: 1px solid #e1e1e8;
                 border-radius: 4px;
+		color: #fff;
+            }
+	        .bs-callout {
+                color: #000;
             }
             @media (max-width: 900px) {
                 .media-left, .media {
@@ -74,7 +80,7 @@
                                 The e-mail with the subject <strong>Bounty secret #1</strong>
                                 from <a href='mailto:nikolaskama@gmail.com'>my Gmail</a>.
 
-                                <div class='highlight'>฿ 0.4</div>
+                                <div class='highlight'>฿ 0.04</div>
                             </div>
                         </div>
                     </div>
@@ -86,7 +92,7 @@
                                 The Facebook note called <strong>Bounty secret #1</strong>
                                 from <a href='https://facebook.com/nikolaskam'>my Facebook</a>.</li>
 
-                                <div class='highlight'>฿ 0.4</div>
+                                <div class='highlight'>฿ 0.04</div>
                             </div>
                         </div>
                     </div>
@@ -97,7 +103,7 @@
                             <div class='caption'>
                                 The <strong>direct message</strong> from me to myself on <a href='https://twitter.com'>my Twitter</a>.
 
-                                <div class='highlight'>฿ 0.4</div>
+                                <div class='highlight'>฿ 0.04</div>
                             </div>
                         </div>
                     </div>
@@ -108,7 +114,7 @@
                             <div class='caption'>
                                 The secret file <strong>~/.bounty</strong> from my <strong>personal MacBook</strong>.
 
-                                <div class='highlight'>฿ 0.8</div>
+                                <div class='highlight'>฿ 0.08</div>
                             </div>
                         </div>
                     </div>
@@ -166,12 +172,12 @@
                     affect the people using my tools.
                 </p>
                 <p>
-                    I am also associated with the <a href='http://www.reddit.com/r/bitcoin'>bitcoin community</a> and a core developer of
-                    <a href='https://openbazaar.org/'>OpenBazaar</a>. Access to my computers or accounts by malicious
-                    parties could negatively affect my open source projects. Many people rely on my
-                    GPG signatures on the OpenBazaar releases and on my commit access to make sure they are secure.
-                    If my signatures are to be treated as trustworthy, I need to have some confidence
-                    that my systems are secure.
+                    I am also associated with the <a href='http://www.reddit.com/r/bitcoin'>bitcoin</a> and 
+                    <a href='https://www.reddit.com/r/netsec/'>infosec</a> community and I work on open source 
+                    <a href='https://nikolaskama.me/projects'>projects</a> all the time. Access to my computers 
+                    or accounts by malicious parties could negatively affect my open source projects. 
+                    Many people rely on my GPG signatures on my commit access to make sure they are secure.
+                    If my signatures are to be treated as trustworthy, I need to have some confidence that my systems are secure.
                 </p>
 
                 <div class='media'>
@@ -179,7 +185,6 @@
                         <h2 class='page-header'>Rules of engagement</h2>
 
                         <ol style='margin-left: 0'>
-                            <li>No university or production system attacks. My colleagues or university don't like being attacked and may prosecute.</li>
                             <li>One pay-out per day.</li>
                             <li>One pay-out per vulnerability.</li>
                             <li>Full disclosure required.</li>
@@ -274,7 +279,7 @@
                             <img class='media-object' src='images/gtklocker.jpg' width='120' />
                         </div>
                         <div class='media-body'>
-                            <h3 style='margin-top: 0'><a href='https://gtklocker.com/bounty.txt'>Kostis Karantias</a></h3>
+                            <h3 style='margin-top: 0'><a href='https://gtklocker.com/'>Kostis Karantias</a></h3>
 
                             <h4>Target</h4>
                             <p>
