--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                 <h2>Motivation</h2>
                 <p>
-                    As a security professional, I am required to maintain a certain level of paranoia and
+                    As an aspiring security professional, I am required to maintain a certain level of paranoia and
                     best operational security practices when it comes to my accounts and systems. In order
                     to have a rigorous <a href='https://en.wikipedia.org/wiki/Threat_model'>threat model</a>,
                     my security must be associated with a monetary value. Putting a bounty on it gives me
