Add project links & fix expression

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                         </div>
                     </div>
 
+                    <!-- Consider deleting fb bounty. -->
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail'>
                             <img src='images/circle/64x64/fb.png' alt='facebook' />
@@ -172,13 +173,15 @@
                     affect the people using my tools.
                 </p>
                 <p>
-                    I am also associated with the <a href='http://www.reddit.com/r/bitcoin'>bitcoin</a> and 
+                    I am also associated with the <a href='https://www.reddit.com/r/bitcoin'>bitcoin</a> and 
                     <a href='https://www.reddit.com/r/netsec/'>infosec</a> community and I work on open source 
                     <a href='https://nikolaskama.me/projects'>projects</a> all the time. Access to my computers 
                     or accounts by malicious parties could negatively affect my open source projects. 
                     Many people rely on my GPG signatures on my commit access to make sure they are secure.
                     If my signatures are to be treated as trustworthy, I need to have some confidence that my systems are secure.
                 </p>
+
+                <!-- HALL OF FAME -->
 
                 <div class='media'>
                     <div class='media-body'>
@@ -220,36 +223,36 @@
                     under social engineering pressure, so even though I may think I am secure, it may be worth a shot. Some of
                     my policies are outlined in the Hall of Fame above.
                 </p>
-                <!-- <ul>
+                <ul>
                     <li>I do not run software downloaded via <strong>HTTP</strong>.</li>
                     <li>I run software downloaded via <strong>HTTPS</strong> from a known domain, via my <strong>package manager</strong>, or <strong>GPG-verified</strong>.</li>
-                    <li>I use <a href='http://brew.sh/'>homebrew</a> and <a href='http://caskroom.io/'>cask</a> as my package manager. I only install <strong>checksum-</strong> or <strong>HTTPS-protected</strong> packages.</li>
+                    <li>I use <a href='https://brew.sh/'>homebrew</a> (mostly) as my package manager. I only install <strong>checksum-</strong> or <strong>HTTPS-protected</strong> packages.</li>
                     <li>I have a <strong>unique password</strong> on my laptop and phone.</li>
                     <li>I keep my laptop and phone software <strong>up to date</strong>.</li>
                     <li>My laptop has <strong>full disk encryption</strong> and a firmware password. Booting from external devices is disabled.</li>
                     <li>My phone has <strong>full disk encryption</strong> enabled and a unique text password.</li>
-                    <li>My laptop is a Mid 2012 Retina 15'' <strong>MacBook</strong> Pro.</li>
-                    <li>My phone is a <strong>OnePlus 3</strong>.</li>
-                    <li>My laptop has a set of <strong>stickers</strong>, two missing <strong>bottom screw pads</strong>, a couple of <strong>burned pixels</strong>, and a
-                        <strong>unique avatar image</strong> in its login screen, making it harder to physically imitate.</li>
-                    <li>I use <strong>LastPass</strong> to store web passwords.</li>
-                    <li>I use ssh, git, svn, and vim. I write tex, python, PHP, HTML/CSS, Javascript (including node), and C/C++.</li>
-                    <li><a href='https://github.com/dionyziz/config'>My configuration files are public</a>.</li>
-                    <li>I run Chrome, VLC, iTerm, Electrum, Adium (including OTR), Spotify, Signal.</li>
+                    <li>My laptop is a 2015 Retina 13' <strong>MacBook</strong> Pro.</li>
+                    <li>My phone is an <strong>iPhone 7</strong>.</li>
+                    <!-- <li>My laptop has a set of <strong>stickers</strong>, a <strong>unique avatar image</strong> in its login screen, making it harder to physically imitate.</li> -->
+                    <li>I use <a href='https://1password.com/'>1Password</a> to store web passwords.</li>
+                    <li>I use <a href='https://en.wikipedia.org/wiki/Secure_Shell'>ssh</a>, <a href='https://git-scm.com/'>git</a>, <a href='https://en.wikipedia.org/wiki/Z_shell'>zsh</a>, <a href='https://www.sublimetext.com/'>sublimetext</a>, and <a href='https://vim.sourceforge.io/'>vim</a>. I write python, bash, HTML/CSS, Javascript and (a little) Swift.</li>
+                    <!-- <li><a href='https://github.com/dionyziz/config'>My configuration files are public</a>.</li> -->
+                    <li>I run Chrome, <a href='https://www.virtualbox.org/'>VirtualBox</a>, <a href='https://www.videolan.org/vlc/'>VLC</a>, <a href='https://www.iterm2.com/'>iTerm2</a>, <a href='https://electrum.org/'>Electrum</a>, <a href='https://www.spotify.com/'>Spotify</a>, <a href='https://slack.com/'>Slack</a> and <a href='https://whispersystems.org/'>Signal.</a></li>
                     <li>I do not download or run unknown <strong>pip</strong> packages, <strong>npm</strong> libraries, or <strong>ruby</strong> gems.</li>
                     <li>I check the <strong>HTTPS protocol</strong>, browser <strong>padlock</strong>, and <strong>domain name</strong> before entering any passwords.</li>
                     <li>I lower my <strong>laptop lid</strong> before entering any valuable password.</li>
                     <li>My phone and laptop are configured to <strong>lock immediately</strong>.</li>
                     <li>I often leave my phone and laptop <strong>unattended</strong> when locked.</li>
                     <li>I will click on any web links you send me without hesitation. I will open your emails and read your instant messages.</li>
-                </ul> -->
+                    <li>I will scan a suspicious link.</li>
+                </ul>
 
-                <h2>Other colleagues with bounties</h2>
+                <h2>Other friends with bounties</h2>
 
-                <p>
-                    Several colleagues are following the bounty game I introduced, as they feel it helps them improve their
+                <p> 
+                    Several friends are also following this bounty game, as they also feel it helps them improve their
                     opsec practices. Their bounties are listed below. Their rules of engagement are similar to those above.
-                    If you have a bounty on your machine, let me know and I will add you to this list.
+                    If you have a bounty on your machine, <strong>let me know</strong> and I will add you to this list.
                 </p>
 
                 <div class='bs-callout bs-callout-info'>
