Fix twitter link

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <div class='thumbnail'>
                             <img src='images/circle/64x64/twitter.png' alt='twitter' />
                             <div class='caption'>
-                                The <strong>direct message</strong> from me to myself on <a href='https://twitter.com'>my Twitter</a>.
+                                The <strong>direct message</strong> from me to myself on <a href='https://twitter.com/nikolaskama'>my Twitter</a>.
 
                                 <div class='highlight'>฿ 0.04</div>
                             </div>
