--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
                 <h2>Why I need this</h2>
                 <p>
-                    I work on cryptography and cryptocurrency tools which require high level of security.
+                    I work on cryptography and other security tools which require high level of security.
                     Access to my computers or accounts could negatively
                     affect the people using my tools.
                 </p>
