Add Dionyziz to friends with bounties

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                     If you do, I'm offering <strong>a treasure hunt</strong> price in <a href='https://bitcoin.org'>bitcoin</a>.
                 </p>
 
+                <p class='lead'>
+                    <i>Inspired by an initial idea by my friend <a href='https://twitter.com/dionyziz'>@dionyziz</a>.</i>
+                </p>
+
                 <h2>Bounties</h2>
                 <p class='lead'>
                     Try to steal these:
@@ -226,7 +230,7 @@
                 <ul>
                     <li>I do not run software downloaded via <strong>HTTP</strong>.</li>
                     <li>I run software downloaded via <strong>HTTPS</strong> from a known domain, via my <strong>package manager</strong>, or <strong>GPG-verified</strong>.</li>
-                    <li>I use <a href='https://brew.sh/'>homebrew</a> (mostly) as my package manager. I only install <strong>checksum-</strong> or <strong>HTTPS-protected</strong> packages.</li>
+                    <li>I use <a href='https://brew.sh/'>homebrew</a> (mostly) as my package manager. I only install <strong>checksum</strong> or <strong>HTTPS-protected</strong> packages.</li>
                     <li>I have a <strong>unique password</strong> on my laptop and phone.</li>
                     <li>I keep my laptop and phone software <strong>up to date</strong>.</li>
                     <li>My laptop has <strong>full disk encryption</strong> and a firmware password. Booting from external devices is disabled.</li>
@@ -255,6 +259,50 @@
                     If you have a bounty on your machine, <strong>let me know</strong> and I will add you to this list.
                 </p>
 
+
+                <div class='bs-callout bs-callout-info'>
+                    <div class='media'>
+                        <div class='media-left'>
+                            <img class='media-object' src='images/dionysis.jpg' width='120' />
+                        </div>
+                        <div class='media-body'>
+                            <h3 style='margin-top: 0'><a href="https://dionyziz.com/">Dionysis Zindros</a></h3>
+
+                            <h4>Target</h4>
+                            <p>
+                                Steal the <strong>~/.bounty</strong> file on his Macbook Pro.
+                            </p>
+
+                            <h4>Payout</h4>
+                            <p>
+                                <strong>฿ 0.8</strong>
+                            </p>
+
+
+                            <h4>Target</h4>
+                            <p>
+                                Post the message "Bounty claimed by @YourName" on <a href='https://www.facebook.com/dionyziz'>his Facebook</a>.
+                            </p>
+
+                            <h4>Payout</h4>
+                            <p>
+                                <strong>฿ 0.4</strong>
+                            </p>
+
+
+                            <h4>Target</h4>
+                            <p>
+                                Post the message "Bounty claimed by @YourName" on <a href='https://www.twitter.com/dionyziz'>his Twitter</a>.
+                            </p>
+
+                            <h4>Payout</h4>
+                            <p>
+                                <strong>฿ 0.4</strong>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class='bs-callout bs-callout-info'>
                     <div class='media'>
                         <div class='media-left'>
@@ -270,7 +318,7 @@
 
                             <h4>Payout</h4>
                             <p>
-                                <strong>0.5 ฿</strong>
+                                <strong>฿ 0.5</strong>
                             </p>
                         </div>
                     </div>
@@ -296,7 +344,7 @@
 
                             <h4>Target</h4>
                             <p>
-                                Post the message "Bounty claimed by @Your Name" on <a href='https://www.facebook.com/gtklocker'>his Facebook</a>.
+                                Post the message "Bounty claimed by @YourName" on <a href='https://www.facebook.com/gtklocker'>his Facebook</a>.
                             </p>
 
                             <h4>Payout</h4>
