--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             <!-- <img src='images/coto_sh.png' width='900' style='margin-bottom:10px;'/> -->
 
                             <p>
-                                In brief, if I had chose to run the python file, a <code>curl</code> command would have 
+                                In brief, if I had chosen to run the python file, a <code>curl</code> command would have 
                                 transfered the malicious file containing the precedent lines of code into my MacBook Pro and 
                                 run them in the form of a bash script. The script would have injected a new <code>plist</code> file,
                                 giving Coto full access to my machine every time I turned it on (on startup), using 
@@ -257,7 +257,7 @@
                             <h4>Security correction</h4>
                             <p>
                                 I should be very careful and diligent about running untrusted software. When I do decide to run 
-                                untrusted code, I should do so in a virtual environment (in a VM). If it's impossible to run within 
+                                untrusted code, I should do so in a virtual machine (in a VM). If it's impossible to run within 
                                 a VM, I should not run it at all. Additionally, I could have also asked to use Google Hangouts for 
                                 screensharing, or insisted on installing Teamviewer.
                             </p>
