Add George Filippas to friends with bounties

--- a/index.html
+++ b/index.html
@@ -390,6 +390,38 @@
                 <div class='bs-callout bs-callout-info'>
                     <div class='media'>
                         <div class='media-left'>
+                            <img class='media-object' src='images/filippas.jpg' width='120' />
+                        </div>
+                        <div class='media-body'>
+                            <h3 style='margin-top: 0'>George Filippas</h3>
+
+                            <h4>Target</h4>
+                            <p>
+                                Steal the <strong>~/.bounty</strong> file on his linux laptop.
+                            </p>
+
+                            <h4>Payout</h4>
+                            <p>
+                                <strong>10 EUR</strong>
+                            </p>
+
+                            <h4>Target</h4>
+                            <p>
+                                Access <strong>his Facebook</strong>.<br />
+                                Access <strong>his Gmail</strong>.<br />
+                            </p>
+
+                            <h4>Payout</h4>
+                            <p>
+                                <strong>5 EUR</strong>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='bs-callout bs-callout-info'>
+                    <div class='media'>
+                        <div class='media-left'>
                             <img class='media-object' src='images/petros.jpg' width='120' />
                         </div>
                         <div class='media-body'>
