Change bg color

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <style>
             body {
                 margin: 15px;
-		background-color: #2b303b;
-		color: #fff;
+                background-color: black;
+                color: #fff;
             }
             .bs-callout .media-body.vertical-center {
                 padding: 15px 0 0 15px;
@@ -31,7 +31,7 @@
                 font-weight: bold;
                 margin-top: 10px;
                 padding: 9px 14px;
-                background-color: #2b303b;
+                background-color: black;
                 border: 1px solid #e1e1e8;
                 border-radius: 4px;
 		color: #fff;
@@ -193,6 +193,7 @@
                         <div class='media-left'>
                             <img class='media-object' src='images/coto.jpg' width='120' />
                         </div>
+                        <!-- <0xCoto> -->
                         <div class='media-body'>
                             <h3 style='margin-top:0'>Apostolos (aka <a href='https://twitter.com/0xCoto'>@0xCoto</a>) <small>March 12th, 2017</small></h3>
 
@@ -269,6 +270,7 @@
 
                         </div>
                     </div>
+                    <!-- </0xCoto> -->
                 </div>
 
                 <div class='media'>
@@ -359,7 +361,7 @@
 
                             <h4>Payout</h4>
                             <p>
-                                <strong>฿ 0.8</strong>
+                                <strong>฿ 0.08</strong>
                             </p>
 
 
@@ -370,7 +372,7 @@
 
                             <h4>Payout</h4>
                             <p>
-                                <strong>฿ 0.4</strong>
+                                <strong>฿ 0.04</strong>
                             </p>
 
 
@@ -381,7 +383,7 @@
 
                             <h4>Payout</h4>
                             <p>
-                                <strong>฿ 0.4</strong>
+                                <strong>฿ 0.04</strong>
                             </p>
                         </div>
                     </div>
