Minor styling changes

--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
         <link rel="icon" type="image/png"
          href="images/panda.png" />
 
-        <!-- Optional theme -->
+        <!-- Optional theme & font -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Anonymous+Pro" />
 
         <style>
             body {
                 margin: 15px;
                 background-color: black;
                 color: #fff;
+            }
+            h2 {
+                font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+                padding-top: 20px;
+                font-weight: 500;
+            }
+            blockquote {
+                font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
             }
             .bs-callout .media-body.vertical-center {
                 padding: 15px 0 0 15px;
@@ -34,7 +43,7 @@
                 background-color: black;
                 border: 1px solid #e1e1e8;
                 border-radius: 4px;
-		color: #fff;
+                color: #fff;
             }
 	        .bs-callout {
                 color: #000;
@@ -49,8 +58,8 @@
 
         <link rel='stylesheet' href='callout.css' />
         <!-- Latest compiled and minified JavaScript -->
-        <script src='bower_components/jquery/dist/jquery.min.js'></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+        <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
     </head>
     <body>
         <div class='container'>
@@ -172,17 +181,10 @@
 
                 <h2>Why I need this</h2>
                 <p>
-                    I work on cryptography and other security tools which require high level of security.
-                    Access to my computers or accounts could negatively
-                    affect the people using my tools.
+                    I work on cryptography and other security tools which require high level of security. Access to my computers or accounts could negatively affect the people using my tools.
                 </p>
                 <p>
-                    I am also associated with the <a href='https://www.reddit.com/r/bitcoin'>bitcoin</a> and 
-                    <a href='https://www.reddit.com/r/netsec/'>infosec</a> community and I work on open source 
-                    <a href='https://nikolaskama.me/projects'>projects</a> all the time. Access to my computers 
-                    or accounts by malicious parties could negatively affect my open source projects. 
-                    Many people rely on my GPG signatures on my commit access to make sure they are secure.
-                    If my signatures are to be treated as trustworthy, I need to have some confidence that my systems are secure.
+                    I am also associated with the <a href='https://www.reddit.com/r/bitcoin'>bitcoin</a> and <a href='https://www.reddit.com/r/netsec/'>infosec</a> community and I work on open source <a href='https://nikolaskama.me/projects'>projects</a> all the time. Access to my computers or accounts by malicious parties could negatively affect my open source projects. People rely on my GPG signatures on my commit access to make sure they are secure. If my signatures are to be treated as trustworthy, I need to have some confidence that my systems are secure.
                 </p>
 
                 <!-- HALL OF FAME -->
@@ -557,7 +559,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-I hereby certify that I will pay the amount of 0.4 BTC as a bounty for access
+I hereby certify that I will pay the amount of 0.02 BTC as a bounty for access
 to my Facebook, Twitter, and Gmail accounts, and the amount of 0.8 BTC as a bounty
 for access to my personal laptop.
 
@@ -590,10 +592,5 @@ yi2Hp/NtyaruAAzkIvBp
                 </div>
             </div>
         </div>
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
 </html>
