Add PGP signature

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 The e-mail with the subject <strong>Bounty secret #1</strong>
                                 from <a href='mailto:nikolaskama@gmail.com'>my Gmail</a>.
 
-                                <div class='highlight'>฿ 0.04</div>
+                                <div class='highlight'>฿ 0.02</div>
                             </div>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                                 The Facebook note called <strong>Bounty secret #1</strong>
                                 from <a href='https://facebook.com/nikolaskam'>my Facebook</a>.</li>
 
-                                <div class='highlight'>฿ 0.04</div>
+                                <div class='highlight'>฿ 0.02</div>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                             <div class='caption'>
                                 The <strong>direct message</strong> from me to myself on <a href='https://twitter.com/nikolaskama'>my Twitter</a>.
 
-                                <div class='highlight'>฿ 0.04</div>
+                                <div class='highlight'>฿ 0.02</div>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                             <div class='caption'>
                                 The secret file <strong>~/.bounty</strong> from my <strong>personal MacBook</strong>.
 
-                                <div class='highlight'>฿ 0.08</div>
+                                <div class='highlight'>฿ 0.04</div>
                             </div>
                         </div>
                     </div>
@@ -555,37 +555,34 @@
                         <h4 class="modal-title" id="myModalLabel">Signed bounty statement</h4>
                       </div>
                       <div class="modal-body">
-<!-- <pre>
+<pre>
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
 I hereby certify that I will pay the amount of 0.02 BTC as a bounty for access
-to my Facebook, Twitter, and Gmail accounts, and the amount of 0.8 BTC as a bounty
+to my Facebook, Twitter, and Gmail accounts, and the amount of 0.04 BTC as a bounty
 for access to my personal laptop.
 
 While I intent to make these payments, it remains to my discretion whether an
 attack is following the correct rules of engagement, and you trust me to pay you
 if you play.
-
-This statement is valid until superseded.
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG/MacGPG2 v2.0.20 (Darwin)
 
-iQIcBAEBCAAGBQJVDfkMAAoJELNinf07h9cdL/EQAJ8zVvdnTydJz2l0ERFRLLgn
-Xcgw4+F2xnP1MT8vLt43EhJZl0ikkAPFEuwtu6fGw2A1S0qFN0XBUtHwl+58cmc2
-QcXaVphihnvY/lfR3Vim7D5cZlHRvIrRnqqzBp9mG1IcaYgsZ5745vgM9sYf7dE2
-Rqar/q86mkSPdRwAfbRZi4MOTZ/F6cRQGLBFZNHlErVmBakdxTNxEUL2YaLAXPIA
-iVyezMmBVidAJDYoD4wg/YY2Wp+ipjqCpB8vwA9YCEYqVivIgIvMd/FX+1Lj+fAy
-6Ch+rcf4FcGfwdW3xpqSmVWCUH0BQQuS3MGVPAdq62I7VoX9UDgdgW5XeO7AfzqS
-c9eNsENW3tWVdANupcewZvfX6x2e6GzUxeCrRomoYfLUZey3Obm3K0XnfxhaSBAB
-Ys1zBrN/1ja5yhXr84iITF2XHulqDv62TNzZXQazBGP6D7dBdj5gSoQR+edwkujq
-ce2Rvq1H0/I5LcL21u/MjNqp1H/SpCGi7r5wx/XECYuCkHF05fduAPTcrP/FBrr+
-++0gaBONfogpqqAdnEqlmDf6619RHixc6ttD925vy7AoS19JygDG54A8ZZdYdwVw
-Ob5x6r9Kl4maGZMx8mI/iEY9WiBWnpA4XlU83VlJF1rfKiHRWpQIbpdgepL74IrL
-yi2Hp/NtyaruAAzkIvBp
-=5dUS
+iQIzBAEBCAAdFiEEg2m0dCbwBtEXAOETx0f3U2cDLR4FAlotIqoACgkQx0f3U2cD
+LR4dVBAAvfUtVgcCW8pSct+zvyaklBN3+LuQLIWgI4AfZqO3ewdsYvEoipWDGCn3
+Ex2qavgIU2Yb9hRYJGBSDXYTMK8CCE8nBzgyMhxTOl999Cc39fOtIyKn9LKD4r3o
+dwVPE5p0XCNTMiJCvSrmve79dBbwl4Acw1E7SPeykWpvkWDQ7GjU3QSOlG7zwvcM
+iAbizBaMWAliZUAgy1z5KkeqhVumVZ37mO4EY8lqb7hFwGm1/UxTFBuoveN4wo2X
+bildNqdcpRN+N8pMNb31uNGJQW4UYwLDI5SdAesf0SJIN+Y7GJ0AXMg4kpGNXy7Q
+Uh+8HWo/Iwb6jDWcszEi9pk1BX27C9XlWP0ku9W2zVu3S0rk/ikb/PBEofAZ3KBS
+DKJupnYF6Fmx0tqwSrxk0Lb4g5zh2dpQpjtO0PFSDlgZcgT7R03+r+uzFxokc6Te
+reGIlBpZMRQLTFQPvZ2WGsVnxA+YrRH+EHrPwzG+c+qffmnjSSiCwD8S6j8kjd6W
+x2OVytBNZSJi20FvC5UNTqc7zyYNgntq7ZgARsD7MjGl34mM+QGm/9RN/N5UyUUL
+cGfYXBnCS5kpVU8dbhxBaRrd4+3Abi3gkOuEBn2bVhaT1gUOHLgSxo9RjqL3Ms3K
+JcuPeoUWXP4xXLi7n+3kiWDEzpvB1Ex3eGWk5XGn8b2d9MPxTlY=
+=G79e
 -----END PGP SIGNATURE-----
-</pre> -->
+</pre>
                       </div>
                     </div>
                   </div>
